Initial commit, add pom