@@ -1,2 +1,14 @@
 # java14-features-test
 Test project with some java14 features
+
+---
+
+Java14 is used
+
+bash run:
+
+```bash
+$ java -version
+must be >= 14
+$ java -jar --enable-preview target/java14-features-test-1.0-SNAPSHOT-jar-with-dependencies.jar
+```
